API task collection pagination
